syntax = "proto3";

package grpc.example.api.v1;

import "google/api/annotations.proto";
import "resources/country.proto";
import "common/pagination.proto";

option java_package = "com.wix.grpc.example.api.v1";

service Countries {
    rpc ListCountries(ListCountriesRequest) returns (ListCountriesResponse) {
        option (google.api.http) = { get: "/api/countries" };
    }

    rpc GetCountry(GetCountryRequest) returns (Country) {
        option (google.api.http) = { get: "/api/countries/{countryId}" };
    }
}

message ListCountriesResponse {
    repeated Country countries = 1;

    PaginationResponse pagination = 10; //[wix.json.unwrapped = true]
}

message ListCountriesRequest {
    bool includePaymentFields = 1;

    PaginationRequest pagination = 10; //[wix.json.unwrapped = true]
}

message GetCountryRequest {
    string countryId = 1;
}